// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PROFILE Renders profile image from URI 1`] = `
<Image
  source={
    Object {
      "uri": "https://pbs.twimg.com/profile_images/941645845409226752/Lt1apZ3Q_400x400.jpg",
    }
  }
  style={
    Object {
      "borderRadius": 25,
      "height": 50,
      "margin": 10,
      "width": 50,
    }
  }
/>
`;

exports[`PROFILE Renders profile image with DefaultProps 1`] = `
<Image
  source={
    Object {
      "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/kfriedson/128.jpg",
    }
  }
  style={
    Object {
      "borderRadius": 25,
      "height": 50,
      "margin": 10,
      "width": 50,
    }
  }
/>
`;
